# WatchyOS_arduino

./: .gitmodules  CMakeLists.txt  Config.h  Database.cpp  Database.h  Display.cpp  Display.h  Event.h  EventLoop.h  JsonBacked.h  LICENSE  LittlefsJson.h  NvsJson.h  README.md  SpiffsJson.h  Vector.h  Watchy.cpp  Watchy.h  main.cpp
